lib/src/snapshots/turnip_calc_lib__tests__small_spike_partial.snap
---
source: src/tests.rs
assertion_line: 91
expression: results

---
[
    (
        SmallSpike,
        0.9288824383164005,
    ),
    (
        Random,
        0.07111756168359959,
    ),
]
